change layout to to avoid overlapping floats

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -97,8 +97,6 @@ img {
 
 header {
   width:270px;
-  float:left;
-  position:fixed;
 }
 
 header ul {
@@ -178,9 +176,6 @@ hr {
 
 footer {
   width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
 }
 
 @media print, screen and (max-width: 960px) {
@@ -198,6 +193,7 @@ footer {
   
   header {
     padding-right:320px;
+      overflow: hidden;
   }
   
   section {
@@ -253,3 +249,4 @@ footer {
     color:#444;
   }
 }
+
